dependencies/policies/with-skip-checks-parameters/.chainsaw-test/resources/pipelinerun-wrong-label.yaml
---
apiVersion: tekton.dev/v1
kind: PipelineRun
metadata:
  name: wrong-label-pr
  labels:
    pipelinesascode.tekton.dev/original-prname: other-repo-on-push
spec:
  pipelineSpec:
    params:
    - name: skip-checks
      default: "false"
    tasks:
    - name: noop
      taskSpec:
        steps:
        - name: noop
          image: bash
